var _jsxFileName='src/divider/Divider.test.js';var _react=require('react');var _react2=_interopRequireDefault(_react);var _reactTestRenderer=require('react-test-renderer');var _reactTestRenderer2=_interopRequireDefault(_reactTestRenderer);var _Divider=require('./Divider');var _Divider2=_interopRequireDefault(_Divider);function _interopRequireDefault(obj){return obj&&obj.__esModule?obj:{default:obj};}describe('DIVIDER',function(){it('Renders with DefaultProps',function(){var component=_reactTestRenderer2.default.create(_react2.default.createElement(_Divider2.default,{__source:{fileName:_jsxFileName,lineNumber:8}})).toJSON();expect(component.props.style.marginLeft).toBe(30);expect(component).toMatchSnapshot();});it('Renders with color prop',function(){var component=_reactTestRenderer2.default.create(_react2.default.createElement(_Divider2.default,{color:'red',__source:{fileName:_jsxFileName,lineNumber:14}})).toJSON();expect(component.props.style.backgroundColor).toBe('red');expect(component).toMatchSnapshot();});it('Renders with fullWidth prop',function(){var component=_reactTestRenderer2.default.create(_react2.default.createElement(_Divider2.default,{fullWidth:true,__source:{fileName:_jsxFileName,lineNumber:20}})).toJSON();expect(component.props.style.width).toBe('100%');expect(component.props.style.marginLeft).toBe(0);expect(component).toMatchSnapshot();});});